<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="241dp"
            android:layout_height="257.38dp"
            android:layout_marginTop="124dp"
            android:contentDescription="Logo"
            android:src="@drawable/grapeguardicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/leaguespartanbold"
            android:text="@string/welcome_message"
            android:textColor="#1E1F22"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/leaguespartanextrabold"
            android:text="@string/app_name"
            android:textAlignment="textStart"
            android:textColor="#8AD667"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/welcomeTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

        <TextView
            android:id="@+id/taglineTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tagline"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#8BD767"
            android:text="@string/button_login"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taglineTextView" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#8AD667"
            android:text="@string/button_register"
            android:textColor="#000000"
            android:textSize="16sp"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
